# EmotionExtractor

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
emotionextractor/: emotionextractor.py
emotionextractor/data/: data.pkl  data_strict.pkl
