[metadata]
name = EmotionExtractor
version = 0.0.3
author = Md Riyadh
author_email = mdriyadh@cmail.carleton.ca
description = Extract Emotion Words from Text or Word Tokens
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riyadhctg/EmotionExtractor.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
include_package_data = True 
packages = find:
install_requires =
    nltk
    setuptools
    wheel
